--- a/TODO.txt
+++ b/TODO.txt
@@ -1,6 +1,6 @@
 // PARSING
 
-	Ajouter les variables au moment de la toeknization
-	verifier here_doc et variables
-	verifier variable env lors du replace
-	
+	//Ajouter les variables au moment de la toeknization
+	//verifier here_doc et variables
+	//verifier variable env lors du replace
+	"'test": not valid => SHOULD BE VALID
